[fix] AdminService